<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/activity_main_background"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    android:weightSum="20"
    android:baselineAligned="false"
    android:scrollbars="vertical"    
    tools:context=".PhonologicalAwarenessSelectVowelActivity" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:background="@null" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="14" >

        <GridLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:columnCount="1"
            android:columnOrderPreserved="false"
            android:orientation="horizontal"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false" >

            <Button
                android:id="@+id/phonological_awareness_select_a"
                style="@style/GenericButton"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/A" />

            <Button
                android:id="@+id/phonological_awareness_select_e"
                style="@style/GenericButton"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/E" />

            <Button
                android:id="@+id/phonological_awareness_select_i"
                style="@style/GenericButton"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_row="2"
                android:text="@string/I" />
            
            <Button
                android:id="@+id/phonological_awareness_select_o"
                style="@style/GenericButton"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/O" />
            
            <Button
                android:id="@+id/phonological_awareness_select_u"
                style="@style/GenericButton"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/U" />
        </GridLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:background="@null" />

</LinearLayout>